kubeflow-manifests/manifests-1.8-branch/apps/pipeline/upstream/env/platform-agnostic-multi-user/minio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations: {}
  labels:
    app: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/name: minio
    kustomize.component: minio
  name: minio
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /minio/
    route:
    - destination:
        host: minio-service.kubeflow.svc.cluster.local
        port:
          number: 9000
